--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ description = "A sudoku solver in Rust, using [ratatui](https://github.com/ratat
 
 [dependencies]
 clap = { version = "4.3", features = ["derive"] }
+console = "0.15"
 crossterm = "*"
 enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
 humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
